--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Linica IDW</title>
 </head>
 <body>
     <header>
         <ul>
             <li>
-                    
                 <a href="contacto.html">Contacto</a>
                 <a href="inicio.html">Inicio</a>
             </li>
