Agregadas redes sociales y arreglado el enlace a infor.html

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linica IDW</title>
+    <title>Clinica IDW</title>
 </head>
 <body>
     <header>
+        <h1>Bienvenido a la Clinica IDW</h1>
         <ul>
             <li>
                 <a href="contacto.html">Contacto</a>
-                <a href="inicio.html">Inicio</a>
             </li>
         </ul>
     </header>
     <main></main>
-    <footer><a href="informacion.html">Información</a></footer>
+    <footer>
+        <a href="info.html">Información</a>
+        <a href="https://www.instagram.com">Instagram</a>
+        <a href="https://www.facebook.com">Facebook</a>
+        <a href="https://www.twitter.com">Twitter</a>
 </body>
 </html>
