Cambiado enlace de redes sociales

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
         <ul>
             <li>
                 <a href="contacto.html">Contacto</a>
+                <a href="info.html">Información</a>
+
             </li>
         </ul>
     </header>
     <main></main>
     <footer>
-        <a href="info.html">Información</a>
         <a href="https://www.instagram.com">Instagram</a>
         <a href="https://www.facebook.com">Facebook</a>
-        <a href="https://www.twitter.com">Twitter</a>
+        <a href="https://www.x.com">Twitter</a>
 </body>
 </html>
