Mover h1 a main para mejor semántica y poner los enlaces en Nav

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a la Clinica IDW</h1>
-        <ul>
-            <li>
-                <a href="contacto.html">Contacto</a>
-                <a href="info.html">Información</a>
-            </li>
-        </ul>
+        <nav>
+            <a href="contacto.html">Contacto</a>
+            <a href="info.html">Información</a>
+        </nav>
     </header>
-    <main></main>
+    <main>
+        <h1>Bienvenido a la Clinica IDW</h1>
+        <!-- Aquí puedes agregar el contenido principal de la página -->
+    </main>
     <footer>
         <a href="https://www.instagram.com">Instagram</a>
         <a href="https://www.facebook.com">Facebook</a>
