Agregar imagen , lorem ipsum y un H2 dentro del main

--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
         <nav>
             <a href="contacto.html">Contacto</a>
             <a href="info.html">Información</a>
+
+            
         </nav>
     </header>
     <main>
+
+    <h2>Bienestar y Salud</h2>
+    <img src="https://via.placeholder.com/600x200" alt="Imagen de la clínica" style="width:100%;height:auto;">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </main>
     <footer>
         <a href="https://www.instagram.com">Instagram</a>
         <a href="https://www.facebook.com">Facebook</a>
         <a href="https://www.x.com">Twitter</a>
+    </footer>
 </body>
 </html>
