--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <nav>
             <a href="contacto.html">Contacto</a>
-            <a href="info.html">Información</a>
+            <a href="institucional.html">institucional</a>
 
             
         </nav>
@@ -20,7 +20,7 @@
     <main>
 
     <h2>Bienestar y Salud</h2>
-    <img src="https://via.placeholder.com/600x200" alt="Imagen de la clínica" style="width:100%;height:auto;">
+    <img src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?q=80&w=853&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen de la clínica" style="width:100%;height:auto;">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </main>
     <footer>
