--- a/institucional.html
+++ b/institucional.html
@@ -17,12 +17,26 @@
     </nav>
   </header>
 
-  <main>
-    <section>
-      <h2>Comprometidos con tu salud</h2>
-    </section>
-  </main>
+ <main>
 
+    <h2>Comprometidos con tu salud</h2>
+      <p>La Clínica IDW es un centro de atención privada que ofrece servicios de cuidado integral, enfocado en el tratamiento de patologías clínico-quirúrgicas frecuentes, siempre con prioridad en la salud y bienestar del paciente.</p>
+      <p>Trabajamos para fomentar una cultura basada en valores esenciales: atención centrada en el paciente y su familia, gestión del conocimiento, y seguridad y bienestar de pacientes y profesionales de la salud.</p>
+
+    <h2>Nuestra Historia</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+    <h2>Equipo Directivo y Autoridades</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+    <h2>Política de Calidad</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+    <h2>Código de Ética</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  
+  </main>
+  
   <footer>
         <a href="https://www.instagram.com">Instagram</a>
         <a href="https://www.facebook.com">Facebook</a>
