cambiados a formato de lista los enlaces del nav

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 
         <nav>
-            <a href="contacto.html">Contacto</a>
-            <a href="institucional.html">institucional</a>
-
-            
+            <ul>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="institucional.html">Institucional</a></li>
+            </ul>
         </nav>
     </header>
     <main>
