--- a/contacto.html
+++ b/contacto.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clínica IDW - Contacto</title>
+    <title>Contacto</title>
 </head>
 <body>
 <header>
-    <h1>Clínica IDW</h1>
+    <h1>Bienvenido a la Clinica IDW</h1>
     <nav>
       <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="info.html">Información</a></li>
+        <li><a href="institucional.html">Institucional</a></li>
         <li><a href="contacto.html" class="active">Contacto</a></li>
       </ul>
     </nav>
@@ -31,10 +31,34 @@
 
       <button type="submit">Enviar</button>
     </form>
+
+    <h2>Cómo encontrarnos</h2>
+    <section>
+      <div>
+        <h3>Contactate con nosotros</h3>
+        <p><b>Teléfono:</b> +54 11 1234 5678</p>
+        <p><b>Dirección:</b> Av. 123, Ciudad de Buenos Aires, Argentina.</p>
+      </div>
+
+      <div>
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.774795537846!2d-58.381559!3d-34.603684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7!2sObelisco!5e0!3m2!1ses!2sar!4v0000000000"
+            width="300" 
+            height="200" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy">
+        </iframe>
+      </div>
+    </section>  
+
   </main>
 
-  <footer>
-    <p>Clínica IDW - 2025</p>
+<footer>
+        <a href="https://www.instagram.com">Instagram</a>
+        <a href="https://www.facebook.com">Facebook</a>
+        <a href="https://www.x.com">X</a>
   </footer>
+
 </body>
 </html>
