--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="IDW_19/CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
+
 </head>
 <body>
 <header>
