--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clinica IDW</title>
-<link rel="stylesheet" href="/IDW_19/CSS/styles.css">
+ <link rel="stylesheet" href="IDW_19/CSS/styles.css">
 
 </head>
 <body>
