--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 <body>
     <header>
         <h1>Bienvenido a la Clinica IDW</h1>
-
-
         <nav>
             <ul>
                 <li><a href="contacto.html">Contacto</a></li>
@@ -22,10 +20,12 @@
     <main>
 <section class= "bienestar">
     <h2>Bienestar y Salud</h2>
+    <div>
     <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="turnos online disponibles">
     <img src="https://images.unsplash.com/photo-1599045118108-bf9954418b76?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="investigacion">
     <img src="https://images.unsplash.com/photo-1581056771107-24ca5f033842?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="imagen paciente">
     <img src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?q=80&w=853&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen de la clínica" style="width:100%;height:auto;">
+        </div>
 </section>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </main>
