--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 </section>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </main>
-    <footer>
-        <a href="https://www.instagram.com">Instagram</a>
-        <a href="https://www.facebook.com">Facebook</a>
-        <a href="https://www.x.com">Twitter</a>
-    </footer>
+   <footer>
+    <a href="https://www.instagram.com">Instagram</a>
+    <a href="https://www.facebook.com">Facebook</a>
+    <a href="https://www.x.com">Twitter</a>
+    <p>Desarrollado por Grupo 19 &copy;</p>
+</footer>
+
 </body>
 </html>
