--- a/institucional.html
+++ b/institucional.html
@@ -39,10 +39,12 @@
   
   </main>
   
-  <footer>
-        <a href="https://www.instagram.com">Instagram</a>
-        <a href="https://www.facebook.com">Facebook</a>
-        <a href="https://www.x.com">X</a>
-  </footer>
+<footer>
+    <a href="https://www.instagram.com">Instagram</a>
+    <a href="https://www.facebook.com">Facebook</a>
+    <a href="https://www.x.com">Twitter</a>
+    <p>Desarrollado por Grupo 19 &copy;</p>
+</footer>
+
 </body>
 </html>
