--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Bienvenido a la Clinica IDW</h1>
         <nav>
             <ul>
+                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="institucional.html">Institucional</a></li>
             </ul>
