--- a/institucional.html
+++ b/institucional.html
@@ -19,24 +19,31 @@
     </nav>
   </header>
 
- <main>
-
-    <h2>Comprometidos con tu salud</h2>
-      <p>La Clínica IDW es un centro de atención privada que ofrece servicios de cuidado integral, enfocado en el tratamiento de patologías clínico-quirúrgicas frecuentes, siempre con prioridad en la salud y bienestar del paciente.</p>
-      <p>Trabajamos para fomentar una cultura basada en valores esenciales: atención centrada en el paciente y su familia, gestión del conocimiento, y seguridad y bienestar de pacientes y profesionales de la salud.</p>
+ <h2>Comprometidos con tu salud</h2>
+    <img src="https://img.freepik.com/foto-gratis/doctor-examinando-mano-paciente_23-2148285670.jpg?semt=ais_hybrid&w=740&q=80" alt="Imagen de médico cuidando de paciente">
+    <p>La Clínica IDW es un centro de atención privada que ofrece servicios de cuidado integral, enfocado en el tratamiento de patologías clínico-quirúrgicas frecuentes, siempre con prioridad en la salud y bienestar del paciente.</p>
+    <p>Trabajamos para fomentar una cultura basada en valores esenciales: atención centrada en el paciente y su familia, gestión del conocimiento, y seguridad y bienestar de pacientes y profesionales de la salud.</p>
 
     <h2>Nuestra Historia</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <img src="https://mx.habcdn.com/photos/project/medium/entrada-consultorios-395801.jpg" alt="Foto de la clínica por dentro">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
     <h2>Equipo Directivo y Autoridades</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <img src="https://st2.depositphotos.com/1008450/11470/i/450/depositphotos_114704178-stock-photo-doctors-and-businessman.jpg" alt="Equipo directivo de la clínica">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
     <h2>Política de Calidad</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <div class="calidad">
+      <ul>
+        <li>Atención centrada en el paciente y su familia</li>
+        <li>Gestión del conocimiento</li>
+        <li>Seguridad y bienestar de pacientes y profesionales</li>
+      </ul>
+    </div>
 
     <h2>Código de Ética</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  
+    <img src="https://www.flowww.es/hubfs/Q22024%20Mayo/Blog/etica-medica-flowww.webp" alt="Imagen representando ética médica">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </main>
   
 <footer>
