--- a/institucional.html
+++ b/institucional.html
@@ -20,8 +20,9 @@
   </header>
 
 <main>   
+
     <h2>Comprometidos con tu salud</h2>
-    <img src="https://img.freepik.com/fotos-premium/doctor-sosteniendo-mano-paciente-tranquilizando-su-paciente-masculino-concepto-mano-ayuda_1715-527.jpg" alt="Imagen de cuidado y bienestar en salud" class="img-fija">
+    <img src="https://img.freepik.com/foto-gratis/doctor-examinando-mano-paciente_23-2148285670.jpg?semt=ais_hybrid&w=740&q=80" alt="Imagen de médico cuidando de paciente">
     <p>La Clínica IDW es un centro de atención privada que ofrece servicios de cuidado integral, enfocado en el tratamiento de patologías clínico-quirúrgicas frecuentes, siempre con prioridad en la salud y bienestar del paciente.</p>
     <p>Trabajamos para fomentar una cultura basada en valores esenciales: atención centrada en el paciente y su familia, gestión del conocimiento, y seguridad y bienestar de pacientes y profesionales de la salud.</p>
 
