--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    "Bootstrap CSS"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 <body>
@@ -63,6 +64,7 @@
     <p>Desarrollado por Grupo 19 &copy;</p>
 </footer>
 
-
+"Bootstrap JS"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
