--- a/index.html
+++ b/index.html
@@ -1,45 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clinica IDW</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Clinica IDW</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a la Clinica IDW</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="institucional.html">Institucional</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-<section class= "bienestar">
+
+<header>
+  <h1>Bienvenido a la Clinica IDW</h1>
+  <nav class="d-flex justify-content-center">
+    <a href="index.html">Inicio</a>
+    <a href="institucional.html">Institucional</a>
+    <a href="contacto.html">Contacto</a>
+  </nav>
+</header>
+
+<main class="container my-4">
+
+  <section>
     <h2>Bienestar y Salud</h2>
-    <div>
-        
-   <div> <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="turnos online disponibles"></div>
-   <div> <img src="https://images.unsplash.com/photo-1599045118108-bf9954418b76?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="investigacion"></div>
-   <div> <img src="https://images.unsplash.com/photo-1581056771107-24ca5f033842?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="imagen paciente"></div>
-    <div><img src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?q=80&w=853&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen de la clínica" style="width:100%;height:auto;"></div>
-   </div>
-</section>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </main>
-   <footer>
-    <a href="https://www.instagram.com">Instagram</a>
-    <a href="https://www.facebook.com">Facebook</a>
-    <a href="https://www.x.com">Twitter</a>
-    <p>Desarrollado por Grupo 19 &copy;</p>
+    <div class="row g-3">
+
+      <!-- Card 1 -->
+      <div class="col-md-4 d-flex">
+        <div class="card shadow-sm flex-fill">
+          <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0" class="card-img-top img-fluid" alt="Turnos online">
+          <div class="card-body text-center d-flex flex-column">
+            <p class="card-text">Turnos online disponibles de forma rápida y sencilla, con confirmación inmediata en tu dispositivo.</p>
+            <div class="d-flex justify-content-center">
+              <button class="btn btn-sm-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">Ver más</button>
+            </div>
+            <div class="collapse mt-2" id="collapse1">
+              <p>Gestioná tus turnos en línea en cualquier momento y mantené todo bajo control sin esperas.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="col-md-4 d-flex">
+        <div class="card shadow-sm flex-fill">
+          <img src="https://images.unsplash.com/photo-1599045118108-bf9954418b76?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0" class="card-img-top img-fluid" alt="Investigación">
+          <div class="card-body text-center d-flex flex-column">
+            <p class="card-text">Investigación constante para mejorar la salud de nuestros pacientes.</p>
+            <div class="d-flex justify-content-center">
+              <button class="btn btn-sm-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">Ver más</button>
+            </div>
+            <div class="collapse mt-2" id="collapse2">
+              <p>Nuestro equipo trabaja en proyectos innovadores y estudios clínicos para ofrecer tratamientos avanzados.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col-md-4 d-flex">
+        <div class="card shadow-sm flex-fill">
+          <img src="https://images.unsplash.com/photo-1581056771107-24ca5f033842?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0" class="card-img-top img-fluid" alt="Paciente">
+          <div class="card-body text-center d-flex flex-column">
+            <p class="card-text">Atención personalizada y cuidado integral del paciente.</p>
+            <div class="d-flex justify-content-center">
+              <button class="btn btn-sm-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">Ver más</button>
+            </div>
+            <div class="collapse mt-2" id="collapse3">
+              <p>Nuestros profesionales acompañan a cada paciente para brindar la mejor experiencia médica posible.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+</main>
+
+<footer>
+  <a href="https://www.instagram.com">Instagram</a> |
+  <a href="https://www.facebook.com">Facebook</a> |
+  <a href="https://www.x.com">Twitter</a>
+  <p>Desarrollado por Grupo 19 &copy;</p>
 </footer>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
