Se actualiza Contacto principalmente, e Index y CSS.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <footer>
   <a href="https://www.instagram.com">Instagram</a> |
   <a href="https://www.facebook.com">Facebook</a> |
-  <a href="https://www.x.com">Twitter</a>
+  <a href="https://www.x.com">X</a>
   <p>Desarrollado por Grupo 19 &copy;</p>
 </footer>
 
