--- a/contacto.html
+++ b/contacto.html
@@ -1,70 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
- <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacto</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Tu CSS -->
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
+
 <header>
-    <h1>Bienvenido a la Clinica IDW</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="institucional.html">Institucional</a></li>
-        <li><a href="contacto.html" class="active">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1>Bienvenido a la Clinica IDW</h1>
+  <nav class="d-flex justify-content-center">
+    <a href="index.html">Inicio</a>
+    <a href="institucional.html">Institucional</a>
+    <a href="contacto.html" class="active">Contacto</a>
+  </nav>
+</header>
 
-  <main>
-    <h2>Contacto</h2>
-    <form>
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre">
+<main class="container my-5">
 
-      <label for="email">Correo:</label>
-      <input type="email" id="email" name="email">
+  <section>
+  <h2 class="text-center mb-4">Contacto</h2>
 
-      <label for="mensaje">Mensaje:</label>
-      <textarea id="mensaje" name="mensaje"></textarea>
+  <!-- Formulario de contacto -->
+  <section class="d-flex justify-content-center mb-5">
+    <div class="card p-4 shadow-sm" style="max-width: 600px; width: 100%;">
+      <form>
+        <div class="mb-3">
+          <label for="nombre" class="form-label form-label-custom">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" class="form-control">
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label form-label-custom">Correo:</label>
+          <input type="email" id="email" name="email" class="form-control">
+        </div>
+        <div class="mb-3">
+          <label for="mensaje" class="form-label form-label-custom">Mensaje:</label>
+          <textarea id="mensaje" name="mensaje" rows="4" class="form-control"></textarea>
+        </div>
 
-      <button type="submit">Enviar</button>
+          <!-- Alert -->
+      <div id="formAlert" class="alert alert-success d-none" role="alert">
+        ¡Formulario enviado correctamente!
+      </div>
+
+      <div class="text-center">
+        <button type="submit" class="btn btn-sm-primary">Enviar</button>
+      </div>
     </form>
+  </section>
+  
+<!-- Info y mapa -->
+<section class="my-5">
+  <h2 class="text-center mb-4">Cómo encontrarnos</h2>
+  
+  <div class="mx-auto" style="max-width: 600px;">
+    <!-- Datos de contacto -->
+    <div class="card p-3 mb-3">
+      <h4 class="text-start">Contactate con nosotros</h4>
+      <p><b>Teléfono:</b> +54 11 1234 5678</p>
+      <p><b>Dirección:</b> Av. 123, Ciudad de Buenos Aires, Argentina.</p>
+    </div>
 
-    <h2>Cómo encontrarnos</h2>
-    <section>
-      <div>
-        <h3>Contactate con nosotros</h3>
-        <p><b>Teléfono:</b> +54 11 1234 5678</p>
-        <p><b>Dirección:</b> Av. 123, Ciudad de Buenos Aires, Argentina.</p>
-      </div>
+    <!-- Mapa -->
+    <div class="card mb-4 p-3 shadow-sm">
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.774795537846!2d-58.381559!3d-34.603684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7!2sObelisco!5e0!3m2!1ses!2sar!4v0000000000"
+        width="100%" 
+        height="250" 
+        style="border:0;" 
+        allowfullscreen 
+        loading="lazy">
+      </iframe>
+    </div>
+  </div>
+</section>
 
-      <div>
-        <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.774795537846!2d-58.381559!3d-34.603684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7!2sObelisco!5e0!3m2!1ses!2sar!4v0000000000"
-            width="300" 
-            height="200" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy">
-        </iframe>
-      </div>
-    </section>  
-
-  </main>
+</main>
 
 <footer>
-    <a href="https://www.instagram.com">Instagram</a>
-    <a href="https://www.facebook.com">Facebook</a>
-    <a href="https://www.x.com">Twitter</a>
-    <p>Desarrollado por Grupo 19 &copy;</p>
+  <a href="https://www.instagram.com">Instagram</a> |
+  <a href="https://www.facebook.com">Facebook</a> |
+  <a href="https://www.x.com">X</a>
+  <p>Desarrollado por Grupo 19 &copy;</p>
 </footer>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Alert con JS -->
+<script>
+  const form = document.querySelector('form');
+  const alertDiv = document.getElementById('formAlert');
+
+  form.addEventListener('submit', function(e) {
+    e.preventDefault(); // Evita que recargue la página
+    alertDiv.classList.remove('d-none'); // Muestra el alert
+  });
+</script>
+
+</body>
+
 </body>
 </html>
