subo una imagen on line para ver como se ve

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <!-- Profesional 1 -->
     <div class="col-md-4">
       <div class="card shadow-sm h-100">
-        <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top" alt="Dr. Juan Pérez">
+     <img https://unsplash.com/es/fotos/una-despampanante-joven-practicante-doctora-o-medica-asiatica-con-bata-blanca-y-estetoscopio-cruzo-los-brazos-cerca-del-cristal-de-la-ventana-grxG4jPkPLs>                      
         <div class="card-body text-center">
-          <h5 class="card-title">Dr. Juan Pérez</h5>
+          <h5 class="card-title">Dra. Juana Pérez</h5>
           <p class="card-text">Cardiólogo</p>
         </div>
       </div>
