vuelvo a lo anterior porque se ven mal las imagenes desde internet

--- a/index.html
+++ b/index.html
@@ -97,16 +97,17 @@
   <h2 class="text-center mb-4">Nuestro Equipo Profesional</h2>
   <div class="row g-4">
 
-    <!-- Profesional 1 -->
+      <!-- Profesional 1 -->
     <div class="col-md-4">
       <div class="card shadow-sm h-100">
-     <img https://unsplash.com/es/fotos/una-despampanante-joven-practicante-doctora-o-medica-asiatica-con-bata-blanca-y-estetoscopio-cruzo-los-brazos-cerca-del-cristal-de-la-ventana-grxG4jPkPLs>                      
+        <img src="https://randomuser.me/api/portraits/women/44.jpg" class="card-img-top" alt="Dra. María Gómez">
         <div class="card-body text-center">
-          <h5 class="card-title">Dra. Juana Pérez</h5>
-          <p class="card-text">Cardiólogo</p>
+          <h5 class="card-title">Dra. María Gómez</h5>
+          <p class="card-text">Pediatra</p>
         </div>
       </div>
     </div>
+
 
     <!-- Profesional 2 -->
     <div class="col-md-4">
