--- a/institucional.html
+++ b/institucional.html
@@ -10,27 +10,19 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Clinica IDW</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li>
-              <a href="index.html">Inicio</a>
-            </li>
-            <li>
-              <a href="institucional.html">Institucional</a>
-            </li>
-            <li>
-              <a href="contacto.html">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <div class="d-flex justify-content-between align-items-center w-100">
+      <h1 class="mb-0">Bienvenido a la Clinica IDW</h1>
+      <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse d-lg-block" id="navbarNav">
+      <nav class="d-flex flex-column flex-lg-row justify-content-lg-center align-items-end align-items-lg-center">
+        <a href="index.html">Inicio</a>
+        <a href="institucional.html">Institucional</a>
+        <a href="contacto.html">Contacto</a>
+      </nav>
+    </div>
   </header>
 
 <main>   
