--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <!-- Profesional 6 -->
     <div class="col-md-4">
       <div class="card shadow-sm h-100">
-        <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top" alt="Dr. Juan Pérez">
+        <img src="CSS/imagenes/doctor1.png" class="card-img-top" alt="Dr. Juan Pérez">
         <div class="card-body text-center">
           <h5 class="card-title">Dr. Juan Pérez</h5>
           <p class="card-text">Cardiólogo</p>
