--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 
 <header>
   <div class="d-flex justify-content-between align-items-center w-100">
-    <h1 class="mb-0">Bienvenido a la Clinica IDW</h1>
+    <img src="./CSS/imagenes/Logo ejemplo.jpeg" alt="Logo Clinica IDW" style="height: 50px;">
+    <h1 class="mb-0 position-absolute start-50 translate-middle-x">Bienvenido a la Clinica IDW</h1>
     <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   </div>
-  <div class="collapse navbar-collapse d-lg-block" id="navbarNav">
-    <nav class="d-flex flex-column flex-lg-row justify-content-lg-center align-items-end align-items-lg-center">
-      <a href="index.html">Inicio</a>
-      <a href="institucional.html">Institucional</a>
-      <a href="contacto.html">Contacto</a>
+  <div class="collapse navbar-collapse d-lg-block w-100" id="navbarNav">
+    <nav class="d-flex flex-column flex-lg-row justify-content-lg-center align-items-stretch align-items-lg-center w-100">
+      <a href="index.html" class="w-100 text-center py-2 d-lg-inline w-lg-auto">Inicio</a>
+      <a href="institucional.html" class="w-100 text-center py-2 d-lg-inline w-lg-auto">Institucional</a>
+      <a href="contacto.html" class="w-100 text-center py-2 d-lg-inline w-lg-auto">Contacto</a>
     </nav>
   </div>
 </header>
