--- a/contacto.html
+++ b/contacto.html
@@ -6,94 +6,116 @@
   <title>Contacto</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Tu CSS -->
   <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
 
 <header>
-  <div class="d-flex justify-content-between align-items-center w-100">
-    <img src="./CSS/imagenes/Logo ejemplo.jpeg" alt="Logo Clinica IDW" style="height: 50px;">
-    <h1 class="mb-0 position-absolute start-50 translate-middle-x">Bienvenido a la Clinica IDW</h1>
+  <div class="d-flex justify-content-between align-items-center w-100 px-3">
+    <a href="index.html">
+      <img src="./CSS/imagenes/Logo ejemplo.jpeg" alt="Logo Clinica IDW" style="height: 50px;">
+    </a>
+    <h1 class="mb-0 position-absolute start-50 translate-middle-x text-center">Bienvenido a la Clinica IDW</h1>
     <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   </div>
   <div class="collapse navbar-collapse d-lg-block w-100" id="navbarNav">
-    <nav class="d-flex flex-column flex-lg-row justify-content-lg-center align-items-stretch align-items-lg-center w-100">
-      <a href="index.html" class="w-100 text-center py-2 d-lg-inline w-lg-auto">Inicio</a>
-      <a href="institucional.html" class="w-100 text-center py-2 d-lg-inline w-lg-auto">Institucional</a>
-      <a href="contacto.html" class="w-100 text-center py-2 d-lg-inline w-lg-auto">Contacto</a>
+    <nav class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 py-2">
+      <a href="index.html" class="nav-link">Inicio</a>
+      <a href="institucional.html" class="nav-link">Institucional</a>
+      <a href="contacto.html" class="nav-link">Contacto</a>
     </nav>
   </div>
 </header>
 
-<main class="container my-5">
+<main class="container-fluid">
 
-  <section>
-  <h2 class="text-center mb-4">Contacto</h2>
+  <!-- Sección Contacto -->
+  <section class="mb-5">
+    <h2 class="text-center">Contacto</h2>
+    <p class="text-start mb-4">Envíanos tu consulta, comentario y/o sugerencia completando el siguiente formulario. Estamos aquí para ayudarte y responder todas tus inquietudes de manera rápida y eficaz.</p>
 
-  <!-- Formulario de contacto -->
-  <section class="d-flex justify-content-center mb-5">
-    <div class="card p-4 shadow-sm" style="max-width: 600px; width: 100%;">
-      <form>
-        <div class="mb-3">
-          <label for="nombre" class="form-label form-label-custom">Nombre:</label>
-          <input type="text" id="nombre" name="nombre" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label for="email" class="form-label form-label-custom">Correo:</label>
-          <input type="email" id="email" name="email" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label for="mensaje" class="form-label form-label-custom">Mensaje:</label>
-          <textarea id="mensaje" name="mensaje" rows="4" class="form-control"></textarea>
-        </div>
+    <!-- Formulario de contacto -->
+    <div class="row justify-content-center mb-5">
+      <div class="col-md-12">
+        <div class="card p-4 shadow-sm">
+          <form>
+            <div class="mb-3">
+              <label for="nombre" class="form-label form-label-custom">Nombre y Apellido:</label>
+              <input type="text" id="nombre" name="nombre" class="form-control" placeholder="Ej: Juan Pérez">
+            </div>
+            <div class="mb-3">
+              <label for="telefono" class="form-label form-label-custom">Teléfono:</label>
+              <input type="tel" id="telefono" name="telefono" class="form-control" placeholder="+54 11 1234 5678">
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label form-label-custom">Correo:</label>
+              <input type="email" id="email" name="email" class="form-control" placeholder="ejemplo@correo.com">
+            </div>
+            <div class="mb-3">
+              <label for="mensaje" class="form-label form-label-custom">Mensaje:</label>
+              <textarea id="mensaje" name="mensaje" rows="4" class="form-control" placeholder="Escribe tu mensaje aquí..."></textarea>
+            </div>
 
-          <!-- Alert -->
-      <div id="formAlert" class="alert alert-success d-none" role="alert">
-        ¡Formulario enviado correctamente!
+            <div class="form-check mb-3">
+              <input class="form-check-input" type="checkbox" id="newsletter" name="newsletter">
+              <label class="form-check-label" for="newsletter">
+                Deseo suscribirme al Newsletter
+              </label>
+            </div>
+
+            <div id="formAlert" class="alert alert-success d-none" role="alert">
+              ¡Formulario enviado correctamente!
+            </div>
+
+            <div class="text-center">
+              <button type="submit" class="btn btn-sm-primary">Enviar</button>
+            </div>
+          </form>
+        </div>
       </div>
-
-      <div class="text-center">
-        <button type="submit" class="btn btn-sm-primary">Enviar</button>
-      </div>
-    </form>
+    </div>
   </section>
   
-<!-- Info y mapa -->
-<section class="my-5">
-  <h2 class="text-center mb-4">Cómo encontrarnos</h2>
-  
-  <div class="mx-auto" style="max-width: 600px;">
-    <!-- Datos de contacto -->
-    <div class="card p-3 mb-3">
-      <h4 class="text-start">Contactate con nosotros</h4>
-      <p><b>Teléfono:</b> +54 11 1234 5678</p>
-      <p><b>Dirección:</b> Av. 123, Ciudad de Buenos Aires, Argentina.</p>
+  <!-- Sección Cómo encontrarnos -->
+  <section class="my-5">
+    <div class="mb-4">
+      <h2 class="text-center">Cómo encontrarnos</h2>
+      <p class="text-start">Contactate con nosotros y visita nuestra clínica en persona o a través de los medios de comunicación disponibles. Estamos para ayudarte y responder todas tus consultas.</p>
     </div>
+    
+    <div class="row justify-content-center">
+      <div class="col-md-12">
+        <!-- Datos de contacto -->
+        <div class="card p-3 mb-3">
+          <h4 class="text-start">Información de contacto</h4>
+          <p><b>Teléfono:</b> +54 11 1234 5678</p>
+          <p><b>Dirección:</b> Av. 123, Ciudad de Buenos Aires, Argentina.</p>
+        </div>
 
-    <!-- Mapa -->
-    <div class="card mb-4 p-3 shadow-sm">
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.774795537846!2d-58.381559!3d-34.603684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7!2sObelisco!5e0!3m2!1ses!2sar!4v0000000000"
-        width="100%" 
-        height="250" 
-        style="border:0;" 
-        allowfullscreen 
-        loading="lazy">
-      </iframe>
+        <!-- Mapa -->
+        <div class="card mb-4 p-3 shadow-sm">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.774795537846!2d-58.381559!3d-34.603684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7!2sObelisco!5e0!3m2!1ses!2sar!4v0000000000"
+            width="100%" 
+            height="300" 
+            style="border:0;" 
+            allowfullscreen 
+            loading="lazy">
+          </iframe>
+        </div>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
 </main>
 
-<footer>
+<footer class="text-center py-3">
   <a href="https://www.instagram.com">Instagram</a> |
   <a href="https://www.facebook.com">Facebook</a> |
   <a href="https://www.x.com">X</a>
-  <p>Desarrollado por Grupo 19 &copy;</p>
+  <p class="mb-0">Desarrollado por Grupo 19 &copy;</p>
 </footer>
 
 <!-- Bootstrap JS -->
@@ -105,12 +127,10 @@
   const alertDiv = document.getElementById('formAlert');
 
   form.addEventListener('submit', function(e) {
-    e.preventDefault(); // Evita que recargue la página
-    alertDiv.classList.remove('d-none'); // Muestra el alert
+    e.preventDefault(); 
+    alertDiv.classList.remove('d-none'); 
   });
 </script>
-
-</body>
 
 </body>
 </html>
