--- a/institucional.html
+++ b/institucional.html
@@ -9,22 +9,25 @@
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
+
 <header>
-    <div class="d-flex justify-content-between align-items-center w-100">
+  <div class="d-flex justify-content-between align-items-center w-100 px-3">
+    <a href="index.html">
       <img src="./CSS/imagenes/Logo ejemplo.jpeg" alt="Logo Clinica IDW" style="height: 50px;">
-      <h1 class="mb-0 position-absolute start-50 translate-middle-x">Bienvenido a la Clinica IDW</h1>
-      <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-    <div class="collapse navbar-collapse d-lg-block w-100" id="navbarNav">
-      <nav class="d-flex flex-column flex-lg-row justify-content-lg-center align-items-stretch align-items-lg-center w-100">
-        <a href="index.html" class="w-100 text-center py-2 d-lg-inline w-lg-auto">Inicio</a>
-        <a href="institucional.html" class="w-100 text-center py-2 d-lg-inline w-lg-auto">Institucional</a>
-        <a href="contacto.html" class="w-100 text-center py-2 d-lg-inline w-lg-auto">Contacto</a>
-      </nav>
-    </div>
-  </header>
+    </a>
+    <h1 class="mb-0 position-absolute start-50 translate-middle-x text-center">Bienvenido a la Clinica IDW</h1>
+    <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+  <div class="collapse navbar-collapse d-lg-block w-100" id="navbarNav">
+    <nav class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 py-2">
+      <a href="index.html" class="nav-link">Inicio</a>
+      <a href="institucional.html" class="nav-link">Institucional</a>
+      <a href="contacto.html" class="nav-link">Contacto</a>
+    </nav>
+  </div>
+</header>
 
 <main>   
 
@@ -64,5 +67,6 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
