--- a/index.html
+++ b/index.html
@@ -87,77 +87,78 @@
   </section>
 
 <!-- NUEVA SECCIÓN: Catálogo de Profesionales -->
-<section>
-  <h2 class="text-center mb-4">Nuestro Equipo Profesional</h2>
-  <div class="row g-4">
+<section class="my-5">
+  <div class="container"> <!-- 👈 Limita el ancho -->
+    <h2 class="text-center mb-4">Nuestro Equipo Profesional</h2>
+    <div class="row g-4 justify-content-center">
 
       <!-- Profesional 1 -->
-    <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://randomuser.me/api/portraits/women/44.jpg" class="card-img-top" alt="Dra. María Gómez">
-        <div class="card-body text-center">
-          <h5 class="card-title">Dra. María Gómez</h5>
-          <p class="card-text">Pediatra</p>
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="https://randomuser.me/api/portraits/women/44.jpg" class="card-img-top" alt="Dra. María Gómez">
+          <div class="card-body text-center">
+            <h5 class="card-title">Dra. María Gómez</h5>
+            <p class="card-text">Pediatra</p>
+          </div>
         </div>
       </div>
-    </div>
 
-
-    <!-- Profesional 2 -->
-    <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://randomuser.me/api/portraits/women/44.jpg" class="card-img-top" alt="Dra. María Gómez">
-        <div class="card-body text-center">
-          <h5 class="card-title">Dra. María Gómez</h5>
-          <p class="card-text">Pediatra</p>
+      <!-- Profesional 2 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="https://randomuser.me/api/portraits/women/44.jpg" class="card-img-top" alt="Dra. María Gómez">
+          <div class="card-body text-center">
+            <h5 class="card-title">Dra. María Gómez</h5>
+            <p class="card-text">Pediatra</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Profesional 3 -->
-    <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://randomuser.me/api/portraits/men/65.jpg" class="card-img-top" alt="Dr. Ricardo López">
-        <div class="card-body text-center">
-          <h5 class="card-title">Dr. Ricardo López</h5>
-          <p class="card-text">Traumatólogo</p>
+      <!-- Profesional 3 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="https://randomuser.me/api/portraits/men/65.jpg" class="card-img-top" alt="Dr. Ricardo López">
+          <div class="card-body text-center">
+            <h5 class="card-title">Dr. Ricardo López</h5>
+            <p class="card-text">Traumatólogo</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Profesional 4 -->
-    <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top" alt="Dr. Juan Pérez">
-        <div class="card-body text-center">
-          <h5 class="card-title">Dr. Juan Pérez</h5>
-          <p class="card-text">Cardiólogo</p>
+      <!-- Profesional 4 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top" alt="Dr. Juan Pérez">
+          <div class="card-body text-center">
+            <h5 class="card-title">Dr. Juan Pérez</h5>
+            <p class="card-text">Cardiólogo</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Profesional 5 -->
-    <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top" alt="Dr. Juan Pérez">
-        <div class="card-body text-center">
-          <h5 class="card-title">Dr. Juan Pérez</h5>
-          <p class="card-text">Cardiólogo</p>
+      <!-- Profesional 5 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top" alt="Dr. Juan Pérez">
+          <div class="card-body text-center">
+            <h5 class="card-title">Dr. Juan Pérez</h5>
+            <p class="card-text">Cardiólogo</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Profesional 6 -->
-    <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="CSS/imagenes/doctor1.png" class="card-img-top" alt="Dr. Juan Pérez">
-        <div class="card-body text-center">
-          <h5 class="card-title">Dr. Juan Pérez</h5>
-          <p class="card-text">Cardiólogo</p>
+      <!-- Profesional 6 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="CSS/imagenes/doctor1.png" class="card-img-top" alt="Dr. Juan Pérez">
+          <div class="card-body text-center">
+            <h5 class="card-title">Dr. Juan Pérez</h5>
+            <p class="card-text">Cardiólogo</p>
+          </div>
         </div>
       </div>
-    </div>
 
+    </div>
   </div>
 </section>
 </main>
