--- a/contacto.html
+++ b/contacto.html
@@ -79,23 +79,24 @@
   </section>
   
   <!-- Sección Cómo encontrarnos -->
-  <section class="my-5">
-    <div class="mb-4">
-      <h2 class="text-center">Cómo encontrarnos</h2>
-      <p class="text-start">Contactate con nosotros y visita nuestra clínica en persona o a través de los medios de comunicación disponibles. Estamos para ayudarte y responder todas tus consultas.</p>
-    </div>
-    
-    <div class="row justify-content-center">
-      <div class="col-md-12">
-        <!-- Datos de contacto -->
-        <div class="card p-3 mb-3">
+<section class="my-5">
+  <div class="container">
+    <h2 class="text-center mb-4">Cómo encontrarnos</h2>
+    <p class="text-start mb-4">Contactate con nosotros y visita nuestra clínica en persona o a través de los medios de comunicación disponibles. Estamos para ayudarte y responder todas tus consultas.</p>
+
+    <div class="row g-4 align-items-start">
+      <!-- Información de contacto -->
+      <div class="col-md-6">
+        <div class="card p-3 h-100 shadow-sm">
           <h4 class="text-start">Información de contacto</h4>
           <p><b>Teléfono:</b> +54 11 1234 5678</p>
           <p><b>Dirección:</b> Av. 123, Ciudad de Buenos Aires, Argentina.</p>
         </div>
+      </div>
 
-        <!-- Mapa -->
-        <div class="card mb-4 p-3 shadow-sm">
+      <!-- Mapa -->
+      <div class="col-md-6">
+        <div class="card p-3 h-100 shadow-sm">
           <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.774795537846!2d-58.381559!3d-34.603684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7!2sObelisco!5e0!3m2!1ses!2sar!4v0000000000"
             width="100%" 
@@ -107,8 +108,8 @@
         </div>
       </div>
     </div>
-  </section>
-
+  </div>
+</section>
 </main>
 
 <footer class="text-center py-3">
