Actualización de estilos y estructura visual

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
 <!-- NUEVA SECCIÓN: Catálogo de Profesionales -->
 <section class="my-5">
-  <div class="container"> <!-- 👈 Limita el ancho -->
+  <div class="container-fluid px-4"> <!-- 👈 Limita el ancho -->
     <h2 class="text-center mb-4">Nuestro Equipo Profesional</h2>
     <div class="row g-4 justify-content-center">
 
       <!-- Profesional 1 -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="https://randomuser.me/api/portraits/women/44.jpg" class="card-img-top" alt="Dra. María Gómez">
+          <img src="CSS/imagenes/doctora3.jpg" class="card-img-top" alt="Dra. María Gómez">
           <div class="card-body text-center">
             <h5 class="card-title">Dra. María Gómez</h5>
             <p class="card-text">Pediatra</p>
@@ -106,10 +106,11 @@
       <!-- Profesional 2 -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="https://randomuser.me/api/portraits/women/44.jpg" class="card-img-top" alt="Dra. María Gómez">
+          <img src="CSS/imagenes/doctora5.jpg" class="card-img-top" alt="Dra. Juana Pereira
+          ">
           <div class="card-body text-center">
-            <h5 class="card-title">Dra. María Gómez</h5>
-            <p class="card-text">Pediatra</p>
+            <h5 class="card-title">Dra. Juana Pereira</h5>
+            <p class="card-text">Cardióloga</p>
           </div>
         </div>
       </div>
@@ -117,7 +118,7 @@
       <!-- Profesional 3 -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="https://randomuser.me/api/portraits/men/65.jpg" class="card-img-top" alt="Dr. Ricardo López">
+          <img src="CSS/imagenes/doctor1.jpg" class="card-img-top" alt="Dr. Ricardo López">
           <div class="card-body text-center">
             <h5 class="card-title">Dr. Ricardo López</h5>
             <p class="card-text">Traumatólogo</p>
@@ -128,10 +129,10 @@
       <!-- Profesional 4 -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top" alt="Dr. Juan Pérez">
+          <img src="CSS/imagenes/doctor2.png" class="card-img-top" alt="Dr. Francisco Cespedes">
           <div class="card-body text-center">
-            <h5 class="card-title">Dr. Juan Pérez</h5>
-            <p class="card-text">Cardiólogo</p>
+            <h5 class="card-title">Dr. Francisco Cespedes</h5>
+            <p class="card-text">Ginecologo</p>
           </div>
         </div>
       </div>
@@ -139,10 +140,10 @@
       <!-- Profesional 5 -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top" alt="Dr. Juan Pérez">
+          <img src="CSS/imagenes/doctora6.jpg" class="card-img-top" alt="Dra. Camila Lopetegui">
           <div class="card-body text-center">
-            <h5 class="card-title">Dr. Juan Pérez</h5>
-            <p class="card-text">Cardiólogo</p>
+            <h5 class="card-title">Dra. Camila Lopetegui</h5>
+            <p class="card-text">Otorrinolaringologa</p>
           </div>
         </div>
       </div>
@@ -150,10 +151,10 @@
       <!-- Profesional 6 -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="CSS/imagenes/doctor1.png" class="card-img-top" alt="Dr. Juan Pérez">
+          <img src="CSS/imagenes/doctor4.jpg" class="card-img-top" alt="Dr. Pablo Jimenez ">
           <div class="card-body text-center">
-            <h5 class="card-title">Dr. Juan Pérez</h5>
-            <p class="card-text">Cardiólogo</p>
+            <h5 class="card-title">Dr. Pablo Jimenez</h5>
+            <p class="card-text">Clínico</p>
           </div>
         </div>
       </div>
